--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fa-solid fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
@@ -80,37 +80,37 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="times">
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Wednesday</h3>
             <h3>10k</h3>
             <h3>The Marker Hotel/h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Monday</h3>
             <h3>5k</h3>
             <h3>The Phoenix Park</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Urban</h2>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
             <h3>Friday</h3>
             <h3>5k</h3>
             <h3>The Marker Hotel</h3>
             <h3>18:30</h3>
         </div>
         <div>
-            <h2>Trail</h2>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
             <h3>Saturday</h3>
             <h3>10k</h3>
             <h3>The Phoenix Park</h3>
             <h3>09:30</h3>
         </div>
         <div>
-            <h2>Coffey</h2>
+            <h2>Coffey <i class="fa-solid fa-mug-hot"></i></h2>
             <h3>Sunday</h3>
             <h3>0k</h3>
             <h3>The Marker Hotel</h3>
