--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="#">Sign up</a>
                     </li>
                     <li>
-                        <a href="#">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                      </li>
                      <li>
                        <a href="index.html" class="active">Home</a>
@@ -118,7 +118,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our Facebook Page ( opens in a new tab"> <i class="fa-brands fa-facebook"></i></a>
@@ -137,7 +137,7 @@
             </li>
         </ul>
     </footer>
-    */ font awsome sourcecode*/
+    
     <script src="https://kit.fontawesome.com/c8e224333e.js" crossorigin="anonymous"></script>
 </body>
 </html>
